# otto-demand-forecasting

./: .dockerignore  .gitignore  Dockerfile  MODEL_CARD.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/: horizon_metrics.csv  metadata.json  model_comparison.csv  training_history.json
configs/: default.yaml
docs/: INTERVIEW_GUIDE.md  RESUME_BULLETS.md
src/otto_forecasting/: api.py  baselines.py  cli.py  config.py  data.py  dataset.py  metrics.py  model.py  pipeline.py  reporting.py  training.py
tests/: test_data.py  test_dataset.py  test_metrics.py  test_model.py
