[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otto-demand-forecasting"
version = "1.0.0"
description = "Leakage-aware multi-horizon e-commerce demand forecasting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "joblib>=1.4",
  "matplotlib>=3.9",
  "numpy>=2.0",
  "pandas>=2.2",
  "pydantic>=2.9",
  "PyYAML>=6.0",
  "scikit-learn>=1.5",
  "torch>=2.4",
  "uvicorn>=0.30"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.9"
]

[project.scripts]
otto-forecast = "otto_forecasting.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 96
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
